--- a/index.html
+++ b/index.html
@@ -33,25 +33,24 @@
 
         body {
             font-family: 'Quicksand', sans-serif;
-            overflow: auto;
+            overflow: hidden;
             background: #111;
             display: flex;
             justify-content: center;
             align-items: center;
             min-height: 100vh;
-            padding: 20px 0;
+            margin: 0;
+            padding: 0;
         }
 
         .app {
             width: 100%;
             max-width: 390px;
-            height: 90vh;
-            max-height: 844px;
+            height: 100vh;
+            max-height: 100%;
             position: relative;
             overflow: hidden;
-            border-radius: 30px;
-            box-shadow: 0 20px 60px rgba(0, 0, 0, .4);
-            border: 4px solid #333;
+            background: #0D6CA8;
         }
 
         .screen {
