--- a/index.html
+++ b/index.html
@@ -302,22 +302,26 @@
 
         /* ===== HOME SCREEN ===== */
         #home .home-title {
-            font-family: 'Luckiest Guy', cursive;
-            font-size: 42px;
             text-align: center;
-            padding: 30px 20px 10px;
-            color: #FFD700;
-            text-shadow: 2px 3px 0 rgba(0, 0, 0, .2), -1px -1px 0 #B8860B;
-            filter: drop-shadow(0 4px 8px rgba(0, 0, 0, .2))
+            padding: 10px 20px 10px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        #home .home-title img {
+            max-width: 280px;
+            height: auto;
+            filter: drop-shadow(0 4px 8px rgba(0, 0, 0, .3));
         }
 
         .categories {
             display: grid;
             grid-template-columns: 1fr 1fr;
             gap: 15px;
-            padding: 10px 25px 220px 25px;
+            padding: 10px 25px 100px 25px;
             overflow-y: auto;
-            max-height: calc(100vh - 250px);
+            max-height: calc(100vh - 200px);
             align-content: start;
             -ms-overflow-style: none;
             scrollbar-width: none
@@ -391,31 +395,23 @@
             text-transform: uppercase
         }
 
-        /* EMPEZAR button - FIXED POSITION */
+        /* EMPEZAR button - NOW IN BOTTOM NAV */
         .btn-empezar {
-            width: 160px;
-            max-width: calc(100% - 40px);
-            margin: 0;
-            padding: 12px;
+            padding: 10px 24px;
             border: 3px solid #B8860B;
             border-radius: 50px;
             font-family: 'Luckiest Guy', cursive;
-            font-size: 22px;
+            font-size: 18px;
             color: white;
             cursor: pointer;
             background: linear-gradient(180deg, #7FD858 0%, #5CC83A 30%, #4CAF50 60%, #3D9B40 100%);
-            box-shadow: 0 5px 0 #2E7D32, 0 6px 15px rgba(76, 175, 80, .4), inset 0 2px 4px rgba(255, 255, 255, .4);
+            box-shadow: 0 4px 0 #2E7D32, 0 5px 12px rgba(76, 175, 80, .4), inset 0 2px 4px rgba(255, 255, 255, .4);
             text-shadow: 0 2px 4px rgba(0, 0, 0, .2);
-            letter-spacing: 2px;
+            letter-spacing: 1.5px;
             transition: all .15s;
-            position: fixed;
-            bottom: 90px;
-            left: 50%;
-            transform: translateX(-50%);
-            z-index: 9999;
-            overflow: hidden
+            overflow: hidden;
+            position: relative;
         }
-
 
         .btn-empezar::before {
             content: '';
@@ -429,8 +425,8 @@
         }
 
         .btn-empezar:active {
-            transform: translateY(4px);
-            box-shadow: 0 2px 0 #2E7D32, 0 4px 10px rgba(76, 175, 80, .3), inset 0 2px 4px rgba(255, 255, 255, .4)
+            transform: translateY(3px);
+            box-shadow: 0 1px 0 #2E7D32, 0 3px 8px rgba(76, 175, 80, .3), inset 0 2px 4px rgba(255, 255, 255, .4)
         }
 
         .bottom-nav {
@@ -441,10 +437,14 @@
             width: 100%;
             max-width: 390px;
             display: flex;
-            justify-content: center;
-            gap: 0;
-            padding: 10px 0 25px;
-            background: rgba(0, 30, 60, 0.95);
+            justify-content: space-between;
+            align-items: center;
+            gap: 15px;
+            padding: 12px 20px 12px 20px;
+            background: linear-gradient(180deg, rgba(13, 108, 168, 0.95) 0%, rgba(10, 85, 135, 0.98) 100%);
+            backdrop-filter: blur(10px);
+            border-top: 2px solid rgba(67, 198, 219, 0.3);
+            box-shadow: 0 -4px 20px rgba(0, 0, 0, 0.3);
             z-index: 9998
         }
 
@@ -452,20 +452,22 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            gap: 4px;
+            gap: 3px;
             cursor: pointer;
-            color: rgba(255, 255, 255, .7);
-            font-size: 12px;
+            color: rgba(255, 255, 255, .8);
+            font-size: 11px;
             font-weight: 600;
-            transition: color .2s
+            transition: all .2s;
+            padding: 5px 10px;
         }
 
         .nav-item:hover {
-            color: white
+            color: white;
+            transform: scale(1.05);
         }
 
         .nav-icon {
-            font-size: 24px
+            font-size: 22px
         }
 
         /* ===== HOW TO PLAY ===== */
@@ -1311,13 +1313,23 @@
                 <div class="fl" style="top:3%;left:5%;font-size:30px;animation-delay:0s">🟣</div>
                 <div class="fl" style="top:5%;right:8%;font-size:28px;animation-delay:1s">⭐</div>
                 <div class="fl" style="top:2%;right:25%;font-size:22px;animation-delay:2s">🔷</div>
+                <div class="fl" style="top:15%;left:10%;font-size:24px;animation-delay:0.5s">🌟</div>
+                <div class="fl" style="top:20%;right:15%;font-size:18px;animation-delay:1.8s">💫</div>
+                <div class="fl" style="top:35%;left:8%;font-size:20px;animation-delay:2.2s">✨</div>
+                <div class="fl" style="top:40%;right:12%;font-size:26px;animation-delay:0.8s">🔶</div>
+                <div class="fl" style="top:55%;left:15%;font-size:22px;animation-delay:1.3s">⭐</div>
+                <div class="fl" style="top:60%;right:10%;font-size:28px;animation-delay:2.7s">🟡</div>
+                <div class="fl" style="top:70%;left:5%;font-size:24px;animation-delay:1.1s">💎</div>
+                <div class="fl" style="top:75%;right:20%;font-size:20px;animation-delay:2.4s">🌈</div>
                 <div class="fl" style="bottom:22%;left:3%;font-size:20px;animation-delay:1.5s">⭐</div>
                 <div class="fl" style="bottom:18%;right:5%;font-size:26px;animation-delay:2.5s">🔷</div>
+                <div class="fl" style="bottom:30%;left:12%;font-size:22px;animation-delay:0.3s">🟠</div>
+                <div class="fl" style="bottom:35%;right:8%;font-size:24px;animation-delay:1.9s">✨</div>
             </div>
-            <div class="home-title" id="homeTitle">Mímica Pro</div>
+            <div class="home-title" id="homeTitle"><img src="a.png" alt="Mímica Pro"></div>
             <div class="categories" id="categoriesGrid"></div>
-            <button class="btn-empezar" id="btnEmpezar" onclick="startGame()">EMPEZAR</button>
             <div class="bottom-nav">
+                <button class="btn-empezar" id="btnEmpezar" onclick="startGame()">EMPEZAR</button>
                 <div class="nav-item" onclick="showScreen('settings')"><span class="nav-icon">⚙️</span><span
                         id="navConfig">Configuración</span></div>
             </div>
