--- a/index.html
+++ b/index.html
@@ -309,6 +309,68 @@
             margin-top: 12px
         }
 
+        /* Splash Screen Animations */
+        @keyframes logoEntrance {
+            0% {
+                transform: scale(0.3) rotate(-10deg);
+                opacity: 0;
+            }
+
+            60% {
+                transform: scale(1.1) rotate(2deg);
+                opacity: 1;
+            }
+
+            100% {
+                transform: scale(1) rotate(0deg);
+                opacity: 1;
+            }
+        }
+
+        @keyframes loaderAppear {
+            0% {
+                opacity: 0;
+                transform: scaleX(0.5);
+            }
+
+            100% {
+                opacity: 1;
+                transform: scaleX(1);
+            }
+        }
+
+        @keyframes fillBar {
+            0% {
+                width: 0%;
+            }
+
+            100% {
+                width: 100%;
+            }
+        }
+
+        @keyframes shimmer {
+            0% {
+                background-position: 200% 0;
+            }
+
+            100% {
+                background-position: -200% 0;
+            }
+        }
+
+        @keyframes subtitleFadeIn {
+            0% {
+                opacity: 0;
+                transform: translateY(10px);
+            }
+
+            100% {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
         /* ===== HOME SCREEN ===== */
         #home .home-title {
             text-align: center;
@@ -1316,34 +1378,28 @@
 
         <!-- ===== SPLASH ===== -->
         <div class="screen bg-blue active" id="splash">
-            <div class="particles">
-                <div class="particle bubble" style="width:120px;height:120px;top:8%;left:10%;animation-delay:0s"></div>
-                <div class="particle bubble" style="width:160px;height:160px;top:15%;right:5%;animation-delay:1.5s">
-                </div>
-                <div class="particle bubble" style="width:80px;height:80px;bottom:20%;right:30%;animation-delay:3s">
-                </div>
-                <div class="particle bubble" style="width:100px;height:100px;bottom:25%;left:5%;animation-delay:2s">
-                </div>
-            </div>
             <div class="sparkles"></div>
             <div class="floaters">
-                <div class="fl" style="top:18%;right:12%;font-size:50px;animation-delay:.5s">⭐</div>
-                <div class="fl" style="bottom:28%;left:8%;font-size:35px;animation-delay:2s">⭐</div>
-                <div class="fl" style="top:3%;right:5%;font-size:12px;color:white;animation-delay:1s">✦</div>
-                <div class="fl" style="bottom:18%;right:10%;font-size:14px;color:white;animation-delay:3s">✦</div>
-                <div class="fl" style="top:25%;left:20%;font-size:12px;color:white;animation-delay:2.5s">✦</div>
+                <div class="fl" style="top:10%;left:8%;font-size:40px;animation-delay:0s">⭐</div>
+                <div class="fl" style="top:15%;right:10%;font-size:35px;animation-delay:1s">💫</div>
+                <div class="fl" style="top:25%;left:15%;font-size:28px;animation-delay:1.5s">✨</div>
+                <div class="fl" style="top:40%;right:12%;font-size:32px;animation-delay:0.5s">🌟</div>
+                <div class="fl" style="bottom:30%;left:10%;font-size:38px;animation-delay:2s">⭐</div>
+                <div class="fl" style="bottom:20%;right:15%;font-size:30px;animation-delay:2.5s">💎</div>
             </div>
-            <div class="splash-logo">
-                <div class="splash-title">MÍMICA</div>
-                <div class="splash-subtitle">PRO</div>
-                <div class="splash-badge">🎮 FAMILY CHARADES</div>
-            </div>
-            <div class="splash-bottom">
-                <div class="load-row"><span>Loading Assets...</span><span id="loadPct">0%</span></div>
-                <div class="load-bar">
-                    <div class="load-fill" id="loadFill"></div>
+            <div
+                style="display:flex;flex-direction:column;align-items:center;justify-content:center;height:100%;position:relative;z-index:10;">
+                <img src="a.png" alt="Mímica Pro"
+                    style="width:300px;margin-bottom:60px;animation:logoEntrance 1.2s cubic-bezier(0.34,1.56,0.64,1) forwards;opacity:0;filter:drop-shadow(0 15px 40px rgba(255,215,0,.5));">
+                <div
+                    style="width:240px;height:10px;background:rgba(255,255,255,.2);border-radius:20px;overflow:hidden;box-shadow:inset 0 2px 6px rgba(0,0,0,.4),0 0 20px rgba(67,198,219,.4);animation:loaderAppear 0.8s ease-out 0.9s forwards;opacity:0;">
+                    <div id="loadFill"
+                        style="height:100%;background:linear-gradient(90deg,#FFD700 0%,#FFA500 25%,#FFD700 50%,#FFA500 75%,#FFD700 100%);background-size:200% 100%;border-radius:20px;width:0;animation:fillBar 2.2s cubic-bezier(0.4,0,0.2,1) forwards,shimmer 1.5s linear infinite;box-shadow:0 0 25px rgba(255,215,0,.9),inset 0 2px 3px rgba(255,255,255,.6);">
+                    </div>
                 </div>
-                <div class="splash-version">v2.4.0 • Build 2023</div>
+                <div
+                    style="margin-top:20px;font-family:'Quicksand',sans-serif;font-size:16px;color:rgba(255,255,255,.7);font-weight:600;animation:subtitleFadeIn 1s ease-out 1.2s forwards;opacity:0;">
+                    Preparando la diversión...</div>
             </div>
         </div>
 
