--- a/index.html
+++ b/index.html
@@ -31,26 +31,34 @@
             --green-dark: #388E3C;
         }
 
+        body,
+        html {
+            height: 100%;
+            width: 100%;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+        }
+
         body {
             font-family: 'Quicksand', sans-serif;
-            overflow: hidden;
             background: #111;
             display: flex;
             justify-content: center;
             align-items: center;
-            min-height: 100vh;
-            margin: 0;
-            padding: 0;
+            min-height: 100%;
         }
 
         .app {
             width: 100%;
             max-width: 390px;
             height: 100vh;
-            max-height: 100%;
+            height: 100dvh;
+            /* Mejor para móviles */
             position: relative;
             overflow: hidden;
-            background: #0D6CA8;
+            background: #000;
+            /* Fondo negro para los bordes en desktop */
         }
 
         .screen {
@@ -374,11 +382,14 @@
         /* ===== HOME SCREEN ===== */
         #home .home-title {
             text-align: center;
-            padding: 110px 20px 10px;
-            /* Desplazado aún más abajo para asegurar que no se toque con el botón */
+            padding: 40px 20px 0px;
+            /* Reducido drásticamente */
             display: flex;
             justify-content: center;
             align-items: center;
+            flex-shrink: 0;
+            position: relative;
+            z-index: 10;
         }
 
         #home .home-title img {
@@ -389,11 +400,14 @@
 
         .categories {
             display: grid;
-            grid-template-columns: 1fr 1fr;
+            grid-template-columns: repeat(2, 1fr);
             gap: 15px;
-            padding: 10px 25px 100px 25px;
+            padding: 20px 20px 120px;
+            /* Padding inferior extra para que el scroll suba los últimos items sobre el botón */
+            flex: 1;
             overflow-y: auto;
-            max-height: calc(100vh - 200px);
+            -webkit-overflow-scrolling: touch;
+            /* Scroll suave en iOS */
             align-content: start;
             -ms-overflow-style: none;
             scrollbar-width: none
@@ -508,36 +522,37 @@
             transform: translateX(-50%);
             width: 100%;
             max-width: 390px;
-            height: 85px;
-            /* Altura explícita para asegurar visibilidad */
+            height: 90px;
             display: flex;
             justify-content: center;
             align-items: center;
-            background: linear-gradient(180deg, #0B5A8F 0%, #0A5587 100%);
+            padding-bottom: env(safe-area-inset-bottom, 10px);
+            background: linear-gradient(180deg, rgba(11, 90, 143, 0.98) 0%, rgba(10, 85, 135, 1) 100%);
             backdrop-filter: blur(15px);
             border-top: 2px solid rgba(67, 198, 219, 0.4);
             box-shadow: 0 -10px 30px rgba(0, 0, 0, 0.5);
             z-index: 10001;
-            transition: transform 0.3s ease;
+            transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);
         }
 
         .bottom-nav.hidden-nav {
-            transform: translate(-50%, 100%);
+            transform: translate(-50%, 110%);
             pointer-events: none;
         }
 
 
 
         .settings-btn {
-            position: fixed;
-            top: 15px;
-            right: 15px;
+            position: absolute;
+            /* Relativo a .app o .screen */
+            top: 20px;
+            right: 20px;
             z-index: 10000;
-            background: rgba(13, 108, 168, 0.9);
-            border: 2px solid rgba(67, 198, 219, 0.4);
+            background: rgba(255, 255, 255, 0.2);
+            border: 2px solid rgba(255, 255, 255, 0.3);
             border-radius: 50%;
-            width: 50px;
-            height: 50px;
+            width: 46px;
+            height: 46px;
             display: flex;
             align-items: center;
             justify-content: center;
