--- a/index.html
+++ b/index.html
@@ -31,34 +31,32 @@
             --green-dark: #388E3C;
         }
 
-        body,
-        html {
+        html,
+        body {
             height: 100%;
-            width: 100%;
             margin: 0;
             padding: 0;
+            background: #111;
             overflow: hidden;
         }
 
         body {
             font-family: 'Quicksand', sans-serif;
-            background: #111;
             display: flex;
             justify-content: center;
-            align-items: center;
-            min-height: 100%;
+            align-items: stretch;
+            /* Fill height */
         }
 
         .app {
             width: 100%;
-            max-width: 390px;
-            height: 100vh;
+            max-width: 414px;
+            /* More standard mobile width */
             height: 100dvh;
-            /* Mejor para móviles */
+            /* Dynamic Viewport Height for mobile */
             position: relative;
             overflow: hidden;
-            background: #000;
-            /* Fondo negro para los bordes en desktop */
+            background: #0D6CA8;
         }
 
         .screen {
@@ -317,78 +315,16 @@
             margin-top: 12px
         }
 
-        /* Splash Screen Animations */
-        @keyframes logoEntrance {
-            0% {
-                transform: scale(0.3) rotate(-10deg);
-                opacity: 0;
-            }
-
-            60% {
-                transform: scale(1.1) rotate(2deg);
-                opacity: 1;
-            }
-
-            100% {
-                transform: scale(1) rotate(0deg);
-                opacity: 1;
-            }
-        }
-
-        @keyframes loaderAppear {
-            0% {
-                opacity: 0;
-                transform: scaleX(0.5);
-            }
-
-            100% {
-                opacity: 1;
-                transform: scaleX(1);
-            }
-        }
-
-        @keyframes fillBar {
-            0% {
-                width: 0%;
-            }
-
-            100% {
-                width: 100%;
-            }
-        }
-
-        @keyframes shimmer {
-            0% {
-                background-position: 200% 0;
-            }
-
-            100% {
-                background-position: -200% 0;
-            }
-        }
-
-        @keyframes subtitleFadeIn {
-            0% {
-                opacity: 0;
-                transform: translateY(10px);
-            }
-
-            100% {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
         /* ===== HOME SCREEN ===== */
         #home .home-title {
             text-align: center;
-            padding: 40px 20px 0px;
-            /* Reducido drásticamente */
+            padding: 5px 20px 5px;
+            /* Reduced padding */
+            margin-top: -15px;
+            /* Move it up "1 cm" */
             display: flex;
             justify-content: center;
             align-items: center;
-            flex-shrink: 0;
-            position: relative;
             z-index: 10;
         }
 
@@ -400,17 +336,18 @@
 
         .categories {
             display: grid;
-            grid-template-columns: repeat(2, 1fr);
+            grid-template-columns: 1fr 1fr;
             gap: 15px;
-            padding: 20px 20px 120px;
-            /* Padding inferior extra para que el scroll suba los últimos items sobre el botón */
-            flex: 1;
+            padding: 5px 25px 110px 25px;
+            /* More bottom padding for nav */
             overflow-y: auto;
-            -webkit-overflow-scrolling: touch;
-            /* Scroll suave en iOS */
+            flex: 1;
+            /* Grow to fill space */
             align-content: start;
             -ms-overflow-style: none;
-            scrollbar-width: none
+            scrollbar-width: none;
+            position: relative;
+            z-index: 5;
         }
 
         .categories::-webkit-scrollbar {
@@ -516,43 +453,36 @@
         }
 
         .bottom-nav {
-            position: fixed;
-            bottom: 0px;
-            left: 50%;
-            transform: translateX(-50%);
+            position: absolute;
+            /* Relative to .app */
+            bottom: 0;
+            left: 0;
             width: 100%;
-            max-width: 390px;
-            height: 90px;
             display: flex;
             justify-content: center;
             align-items: center;
-            padding-bottom: env(safe-area-inset-bottom, 10px);
-            background: linear-gradient(180deg, rgba(11, 90, 143, 0.98) 0%, rgba(10, 85, 135, 1) 100%);
+            padding: 15px 20px 30px 20px;
+            /* More bottom padding for safe area */
+            background: linear-gradient(180deg, rgba(13, 108, 168, 0.7) 0%, rgba(10, 85, 135, 0.95) 100%);
             backdrop-filter: blur(15px);
-            border-top: 2px solid rgba(67, 198, 219, 0.4);
-            box-shadow: 0 -10px 30px rgba(0, 0, 0, 0.5);
-            z-index: 10001;
-            transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-        }
-
-        .bottom-nav.hidden-nav {
-            transform: translate(-50%, 110%);
-            pointer-events: none;
+            -webkit-backdrop-filter: blur(15px);
+            border-top: 2px solid rgba(255, 255, 255, 0.15);
+            box-shadow: 0 -10px 30px rgba(0, 0, 0, 0.3);
+            z-index: 9998
         }
 
 
 
         .settings-btn {
-            position: absolute;
-            /* Relativo a .app o .screen */
-            top: 20px;
-            right: 20px;
+            position: fixed;
+            top: 15px;
+            right: 15px;
             z-index: 10000;
-            background: rgba(255, 255, 255, 0.2);
-            border: 2px solid rgba(255, 255, 255, 0.3);
+            background: rgba(13, 108, 168, 0.9);
+            border: 2px solid rgba(67, 198, 219, 0.4);
             border-radius: 50%;
-            width: 46px;
-            height: 46px;
+            width: 50px;
+            height: 50px;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -1400,28 +1330,34 @@
 
         <!-- ===== SPLASH ===== -->
         <div class="screen bg-blue active" id="splash">
+            <div class="particles">
+                <div class="particle bubble" style="width:120px;height:120px;top:8%;left:10%;animation-delay:0s"></div>
+                <div class="particle bubble" style="width:160px;height:160px;top:15%;right:5%;animation-delay:1.5s">
+                </div>
+                <div class="particle bubble" style="width:80px;height:80px;bottom:20%;right:30%;animation-delay:3s">
+                </div>
+                <div class="particle bubble" style="width:100px;height:100px;bottom:25%;left:5%;animation-delay:2s">
+                </div>
+            </div>
             <div class="sparkles"></div>
             <div class="floaters">
-                <div class="fl" style="top:10%;left:8%;font-size:40px;animation-delay:0s">⭐</div>
-                <div class="fl" style="top:15%;right:10%;font-size:35px;animation-delay:1s">💫</div>
-                <div class="fl" style="top:25%;left:15%;font-size:28px;animation-delay:1.5s">✨</div>
-                <div class="fl" style="top:40%;right:12%;font-size:32px;animation-delay:0.5s">🌟</div>
-                <div class="fl" style="bottom:30%;left:10%;font-size:38px;animation-delay:2s">⭐</div>
-                <div class="fl" style="bottom:20%;right:15%;font-size:30px;animation-delay:2.5s">💎</div>
+                <div class="fl" style="top:18%;right:12%;font-size:50px;animation-delay:.5s">⭐</div>
+                <div class="fl" style="bottom:28%;left:8%;font-size:35px;animation-delay:2s">⭐</div>
+                <div class="fl" style="top:3%;right:5%;font-size:12px;color:white;animation-delay:1s">✦</div>
+                <div class="fl" style="bottom:18%;right:10%;font-size:14px;color:white;animation-delay:3s">✦</div>
+                <div class="fl" style="top:25%;left:20%;font-size:12px;color:white;animation-delay:2.5s">✦</div>
             </div>
-            <div
-                style="display:flex;flex-direction:column;align-items:center;justify-content:center;height:100%;position:relative;z-index:10;">
-                <img src="a.png" alt="Mímica Pro"
-                    style="width:300px;margin-bottom:60px;animation:logoEntrance 1.2s cubic-bezier(0.34,1.56,0.64,1) forwards;opacity:0;filter:drop-shadow(0 15px 40px rgba(255,215,0,.5));">
-                <div
-                    style="width:240px;height:10px;background:rgba(255,255,255,.2);border-radius:20px;overflow:hidden;box-shadow:inset 0 2px 6px rgba(0,0,0,.4),0 0 20px rgba(67,198,219,.4);animation:loaderAppear 0.8s ease-out 0.9s forwards;opacity:0;">
-                    <div id="loadFill"
-                        style="height:100%;background:linear-gradient(90deg,#FFD700 0%,#FFA500 25%,#FFD700 50%,#FFA500 75%,#FFD700 100%);background-size:200% 100%;border-radius:20px;width:0;animation:fillBar 2.2s cubic-bezier(0.4,0,0.2,1) forwards,shimmer 1.5s linear infinite;box-shadow:0 0 25px rgba(255,215,0,.9),inset 0 2px 3px rgba(255,255,255,.6);">
-                    </div>
+            <div class="splash-logo">
+                <div class="splash-title">MÍMICA</div>
+                <div class="splash-subtitle">PRO</div>
+                <div class="splash-badge">🎮 FAMILY CHARADES</div>
+            </div>
+            <div class="splash-bottom">
+                <div class="load-row"><span>Loading Assets...</span><span id="loadPct">0%</span></div>
+                <div class="load-bar">
+                    <div class="load-fill" id="loadFill"></div>
                 </div>
-                <div
-                    style="margin-top:20px;font-family:'Quicksand',sans-serif;font-size:16px;color:rgba(255,255,255,.7);font-weight:600;animation:subtitleFadeIn 1s ease-out 1.2s forwards;opacity:0;">
-                    Preparando la diversión...</div>
+                <div class="splash-version">v2.4.0 • Build 2023</div>
             </div>
         </div>
 
@@ -1430,20 +1366,25 @@
             <div class="sparkles"></div>
             <div class="floaters">
                 <div class="fl" style="top:3%;left:5%;font-size:30px;animation-delay:0s">🟣</div>
-                <div class="fl" style="top:5%;right:8%;font-size:28px;animation-delay:1s">⭐</div>
-                <div class="fl" style="top:2%;right:25%;font-size:22px;animation-delay:2s">🔷</div>
-                <div class="fl" style="top:15%;left:10%;font-size:24px;animation-delay:0.5s">🌟</div>
-                <div class="fl" style="top:20%;right:15%;font-size:18px;animation-delay:1.8s">💫</div>
-                <div class="fl" style="top:35%;left:8%;font-size:20px;animation-delay:2.2s">✨</div>
-                <div class="fl" style="top:40%;right:12%;font-size:26px;animation-delay:0.8s">🔶</div>
-                <div class="fl" style="top:55%;left:15%;font-size:22px;animation-delay:1.3s">⭐</div>
-                <div class="fl" style="top:60%;right:10%;font-size:28px;animation-delay:2.7s">🟡</div>
-                <div class="fl" style="top:70%;left:5%;font-size:24px;animation-delay:1.1s">💎</div>
+                <div class="fl" style="top:7%;right:12%;font-size:28px;animation-delay:1s">⭐</div>
+                <div class="fl" style="top:2%;right:30%;font-size:22px;animation-delay:2s">🔷</div>
+                <div class="fl" style="top:12%;left:15%;font-size:24px;animation-delay:0.5s">🌟</div>
+                <div class="fl" style="top:25%;right:18%;font-size:35px;animation-delay:1.8s;filter:hue-rotate(45deg)">
+                    💫</div>
+                <div class="fl" style="top:45%;left:8%;font-size:20px;animation-delay:2.2s">✨</div>
+                <div class="fl" style="top:35%;right:5%;font-size:32px;animation-delay:3.5s;opacity:0.6">🎈</div>
+                <div class="fl" style="top:55%;right:25%;font-size:26px;animation-delay:0.8s;filter:hue-rotate(90deg)">
+                    🔶</div>
+                <div class="fl" style="top:65%;left:12%;font-size:40px;animation-delay:1.3s">⭐</div>
+                <div class="fl" style="top:50%;right:10%;font-size:28px;animation-delay:2.7s">🟡</div>
+                <div class="fl" style="top:80%;left:5%;font-size:24px;animation-delay:1.1s">💎</div>
                 <div class="fl" style="top:75%;right:20%;font-size:20px;animation-delay:2.4s">🌈</div>
-                <div class="fl" style="bottom:22%;left:3%;font-size:20px;animation-delay:1.5s">⭐</div>
-                <div class="fl" style="bottom:18%;right:5%;font-size:26px;animation-delay:2.5s">🔷</div>
-                <div class="fl" style="bottom:30%;left:12%;font-size:22px;animation-delay:0.3s">🟠</div>
-                <div class="fl" style="bottom:35%;right:8%;font-size:24px;animation-delay:1.9s">✨</div>
+                <div class="fl" style="bottom:15%;left:3%;font-size:30px;animation-delay:1.5s">⭐</div>
+                <div class="fl" style="bottom:10%;right:5%;font-size:26px;animation-delay:2.5s">🔷</div>
+                <div class="fl" style="bottom:25%;left:25%;font-size:22px;animation-delay:0.3s">🟠</div>
+                <div class="fl" style="bottom:20%;right:35%;font-size:24px;animation-delay:1.9s">✨</div>
+                <div class="fl" style="top:30%;left:40%;font-size:18px;animation-delay:4s;opacity:0.5">☁️</div>
+                <div class="fl" style="bottom:40%;left:50%;font-size:25px;animation-delay:3s">🌟</div>
             </div>
             <div class="settings-btn" onclick="showScreen('settings')">
                 <span class="nav-icon">⚙️</span>
@@ -1587,10 +1528,12 @@
             window.addEventListener('load', () => {
                 let pct = 0;
                 const fill = document.getElementById('loadFill');
+                const txt = document.getElementById('loadPct');
                 const interval = setInterval(() => {
                     pct += Math.random() * 15 + 5;
                     if (pct >= 100) { pct = 100; clearInterval(interval); setTimeout(() => showScreen('home'), 500); }
-                    if (fill) fill.style.width = pct + '%';
+                    fill.style.width = pct + '%';
+                    txt.textContent = Math.floor(pct) + '%';
                 }, 200);
             });
 
@@ -1617,14 +1560,13 @@
             // ===== NAVIGATION =====
             function showScreen(id) {
                 document.querySelectorAll('.screen').forEach(s => s.classList.remove('active'));
-                const target = document.getElementById(id);
-                if (target) target.classList.add('active');
+                document.getElementById(id).classList.add('active');
 
-                // Toggle bottom nav visibility via class instead of manual style
+                // Show/Hide bottom nav only on home
                 const nav = document.querySelector('.bottom-nav');
                 if (nav) {
-                    if (id === 'home') nav.classList.remove('hidden-nav');
-                    else nav.classList.add('hidden-nav');
+                    if (id === 'home') nav.style.display = 'flex';
+                    else nav.style.display = 'none';
                 }
 
                 if (id === 'home') renderCategories();
