--- a/index.html
+++ b/index.html
@@ -318,10 +318,7 @@
         /* ===== HOME SCREEN ===== */
         #home .home-title {
             text-align: center;
-            padding: 5px 20px 5px;
-            /* Reduced padding */
-            margin-top: -15px;
-            /* Move it up "1 cm" */
+            padding: 20px 20px 10px;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -329,7 +326,7 @@
         }
 
         #home .home-title img {
-            max-width: 280px;
+            max-width: 250px;
             height: auto;
             filter: drop-shadow(0 4px 8px rgba(0, 0, 0, .3));
         }
@@ -337,21 +334,24 @@
         .categories {
             display: grid;
             grid-template-columns: 1fr 1fr;
-            gap: 15px;
-            padding: 5px 25px 110px 25px;
-            /* More bottom padding for nav */
+            gap: 12px;
+            padding: 10px 25px 90px 25px;
             overflow-y: auto;
             flex: 1;
-            /* Grow to fill space */
             align-content: start;
-            -ms-overflow-style: none;
-            scrollbar-width: none;
-            position: relative;
-            z-index: 5;
+            /* Force scrollbar visibility */
+            scrollbar-width: thin;
+            scrollbar-color: rgba(255, 215, 0, 0.5) transparent;
         }
 
         .categories::-webkit-scrollbar {
-            display: none;
+            display: block;
+            width: 4px;
+        }
+
+        .categories::-webkit-scrollbar-thumb {
+            background: rgba(255, 215, 0, 0.4);
+            border-radius: 10px;
         }
 
         .cat-item {
@@ -383,16 +383,18 @@
         }
 
         .cat-icon-wrap {
-            width: 120px;
-            height: 120px;
+            width: 100px;
+            height: 100px;
             display: flex;
             align-items: center;
             justify-content: center;
-            filter: drop-shadow(0 8px 15px rgba(0, 0, 0, .25));
-            transition: all .3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-            border-radius: 24px;
-            border: 4px solid transparent;
+            filter: drop-shadow(0 4px 10px rgba(0, 0, 0, 0.2));
+            transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+            border-radius: 28px;
             background: rgba(255, 255, 255, 0.05);
+            border: 2px solid rgba(255, 255, 255, 0.1);
+            position: relative;
+            overflow: hidden;
         }
 
         .cat-icon-wrap img {
@@ -461,13 +463,13 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            padding: 15px 20px 30px 20px;
+            padding: 15px 20px 25px 20px;
             /* More bottom padding for safe area */
-            background: linear-gradient(180deg, rgba(13, 108, 168, 0.7) 0%, rgba(10, 85, 135, 0.95) 100%);
+            background: linear-gradient(180deg, rgba(8, 70, 115, 0.8) 0%, rgba(10, 85, 135, 1) 100%);
             backdrop-filter: blur(15px);
             -webkit-backdrop-filter: blur(15px);
-            border-top: 2px solid rgba(255, 255, 255, 0.15);
-            box-shadow: 0 -10px 30px rgba(0, 0, 0, 0.3);
+            border-top: 2px solid rgba(255, 255, 255, 0.2);
+            box-shadow: 0 -10px 40px rgba(0, 0, 0, 0.5);
             z-index: 9998
         }
 
@@ -1622,7 +1624,17 @@
                 });
                 if (currentWords.length === 0) { alert("Error: No words loaded"); return; }
 
-                currentWords.sort(() => Math.random() - 0.5);
+                // Improved Randomization: Use a robust Fisher-Yates shuffle
+                function shuffle(array) {
+                    for (let i = array.length - 1; i > 0; i--) {
+                        const j = Math.floor(Math.random() * (i + 1));
+                        [array[i], array[j]] = [array[j], array[i]];
+                    }
+                    return array;
+                }
+
+                shuffle(currentWords);
+
                 wordIdx = 0; score = 0;
                 timeLeft = parseInt(gameTime);
                 showScreen('game');
